@@ -4,7 +4,9 @@ Priority: optional
 Maintainer: Debian Science Maintainers <debian-science-maintainers@alioth-lists.debian.net>
 Build-Depends:
   cmake,
+  cython3,
   debhelper (>= 13),
+  dh-python,
   git,
   gobject-introspection,
   gtk-doc-tools,
@@ -30,12 +32,22 @@ Build-Depends:
   libprotobuf-dev,
   libprotoc-dev,
   protobuf-compiler-grpc,
+  python3-cffi <!nocheck>,
   python3-dev,
+  python3-hypothesis <!nocheck>,
   python3-numpy,
+  python3-pandas <!nocheck>,
+  python3-pytest <!nocheck>,
+  python3-pytest-runner <!nocheck>,
+  python3-pytest-lazy-fixture <!nocheck>,
+  python3-setuptools-scm,
+  python3-tz <!nocheck>,
+  python3-wheel <!nocheck>,
   rapidjson-dev,
   libjemalloc-dev,
   libthrift-dev,
   tzdata,
+  tzdata-legacy,
   zlib1g-dev,
   clang,
   clang-tidy,
