@@ -12,6 +12,7 @@ apache-arrow (7.0.0-1) UNRELEASED; urgency=medium
   * Install readme, notice and license into the main -dev package
   * Turn off jemalloc as upstream wants to build from downloaded source
   * fail-missing files that are not installed to help develop packaging
+  * Build and test pyarrow
 
  -- Sascha Steinbiss <satta@debian.org>  Sun, 20 Feb 2022 12:57:32 +0100
 
